Fix on safari

--- a/src/components/style/imports/_main.scss
+++ b/src/components/style/imports/_main.scss
@@ -93,6 +93,7 @@
   background-image: url("../img/assets/bgwp-e1644425763180.png");
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
   padding: $base-sizing*3 0;
 
   &__wrapper {
